...
        case .trim: String(localized: "Trim")
        case .cleanUp: String(localized: "Clean Up")
        case .speed: String(localized: "Speed")
        case .text: String(localized: "Text")
        case .style: String(localized: "Presets")
        case .captions: String(localized: "Captions")
        case .audio: String(localized: "Voice")
        case .music: String(localized: "Music")
        case .voiceOver: String(localized: "Voice-over")
        case .media: String(localized: "Media")
        case .adjust: String(localized: "Adjust")
        case .filters: String(localized: "Filters")
        case .crop: String(localized: "Crop")
...
